fix:z-index

--- a/src/less/ai-ding/index.less
+++ b/src/less/ai-ding/index.less
@@ -21,7 +21,7 @@
   .nav {
     position: fixed;
     top: 0;
-    z-index: 50;
+    z-index: 9995;
   }
   .container {
     margin-top: 30px;
