--- a/src/less/components/Nav.less
+++ b/src/less/components/Nav.less
@@ -4,7 +4,7 @@
   width: 100%;
   height: 50px;
   line-height: 50px;
-  z-index: 40;
+  z-index: 9994;
   background: linear-gradient(-45deg, #b30d34, #954f75, #00e0c7, #009394, #006270, #4e2e54);
   background-size: 600% 600%;
   animation: Gradient 25s ease infinite;
